--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <packaging>pom</packaging>
 
     <groupId>com.evozon</groupId>
-    <artifactId>nutch-crawl</artifactId>
+    <artifactId>nutch-builder</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <scm>
