--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,23 @@
     <artifactId>nutch-builder</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!--
     <scm>
+        <connection>>scm:git:git@github.com:arthur-evozon/gora.git</connection>
         <developerConnection>scm:git:git@github.com:arthur-evozon/nutch.git</developerConnection>
     </scm>
+    -->
 
     <!-- ============== -->
     <!-- = Properties = -->
     <!-- ============== -->
     <properties>
+        <gora.repo.url>scm:git:git@github.com:arthur-evozon/gora.git</gora.repo.url>
+        <gora.branch>upgrade_hadoop-2.7.1_hbase-1.1.2_solr-4.10.3</gora.branch>
+        <gora.version>0.7-SNAPSHOT</gora.version>
+        <nutch.repo.url>scm:git:git@github.com:arthur-evozon/nutch.git</nutch.repo.url>
         <nutch.branch>gora-0.7-SNAPSHOT</nutch.branch>
+
     </properties>
 
     <!-- ================ -->
@@ -53,20 +61,55 @@
                 <version>1.9.4</version>
                 <executions>
                     <execution>
-                        <id>dependency</id>
-                        <phase>validate</phase>
+                        <id>gora-dependency</id>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <connectionUrl>${gora.repo.url}</connectionUrl>
+                            <scmVersion>${gora.branch}</scmVersion>
+                            <scmVersionType>branch</scmVersionType>
+                            <checkoutDirectory>${project.build.directory}/apache-gora-${gora.branch}</checkoutDirectory>
+                        </configuration>
+                        <goals>
+                            <goal>checkout</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>nutch-dependency</id>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <connectionUrl>${nutch.repo.url}</connectionUrl>
+                            <scmVersion>${nutch.branch}</scmVersion>
+                            <scmVersionType>branch</scmVersionType>
+                            <checkoutDirectory>${project.build.directory}/apache-nutch-${nutch.branch}</checkoutDirectory>
+                        </configuration>
                         <goals>
                             <goal>checkout</goal>
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
 
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.4.0</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <goals>install</goals>
-                    <connectionType>developerConnection</connectionType>
-                    <scmVersion>${nutch.branch}</scmVersion>
-                    <scmVersionType>branch</scmVersionType>
-                    <checkoutDirectory>${project.build.directory}/apache-nutch-${nutch.branch}</checkoutDirectory>
+                    <executable>mvn</executable>
+                    <!-- optional -->
+                    <workingDirectory>${project.build.directory}/apache-gora-${gora.branch}</workingDirectory>
+                    <arguments>
+                        <argument>-DskipTests</argument>
+                        <argument>clean</argument>
+                        <argument>install</argument>
+                    </arguments>
                 </configuration>
             </plugin>
 
@@ -149,7 +192,7 @@
                                 <echo message="Packaging" />
                                 <delete dir="${project.build.directory}/apache-nutch-${nutch.branch}/runtime/local/test"/>
                                 <zip destfile="${project.build.directory}/${project.artifactId}.zip" basedir="${project.build.directory}/apache-nutch-${nutch.branch}/runtime/local/"/>
-                                <delete dir="${project.build.directory}/apache-nutch-${nutch.branch}"/>
+                                <!--<delete dir="${project.build.directory}/apache-nutch-${nutch.branch}"/>-->
                             </tasks>
                         </configuration>
                     </execution>
