--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -46,6 +46,8 @@
     <dependency org="commons-codec" name="commons-codec" rev="1.3"
                 conf="*->default" />
 
+    <dependency org="org.apache.commons" name="commons-compress" rev="1.9" conf="*->default" />
+
     <!-- Hadoop Dependencies -->
     <dependency org="org.apache.hadoop" name="hadoop-common" rev="2.7.1" conf="*->default">
       <exclude org="hsqldb" name="hsqldb" />
