--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -32,6 +32,9 @@
   </publications>
 
   <dependencies>
+    <dependency org="org.apache.solr" name="solr-core" rev="4.6.0"
+                conf="*->default" />
+
     <dependency org="org.apache.solr" name="solr-solrj" rev="4.6.0"
                 conf="*->default" />
     <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.6.1"
@@ -42,14 +45,14 @@
     <dependency org="commons-collections" name="commons-collections"
                 rev="3.1" conf="*->default" />
     <dependency org="org.apache.httpcomponents" name="httpclient"
-                rev="4.2.5" conf="*->master" />
+                rev="4.3" conf="*->master" />
     <dependency org="commons-codec" name="commons-codec" rev="1.3"
                 conf="*->default" />
 
     <dependency org="org.apache.commons" name="commons-compress" rev="1.9" conf="*->default" />
 
     <!-- Hadoop Dependencies -->
-    <dependency org="org.apache.hadoop" name="hadoop-common" rev="2.7.1" conf="*->default">
+    <dependency org="org.apache.hadoop" name="hadoop-common" rev="2.7.2" conf="*->default">
       <exclude org="hsqldb" name="hsqldb" />
       <exclude org="net.sf.kosmosfs" name="kfs" />
       <exclude org="net.java.dev.jets3t" name="jets3t" />
@@ -57,9 +60,9 @@
       <exclude org="org.mortbay.jetty" name="jsp-*" />
       <exclude org="ant" name="ant" />
     </dependency>
-    <dependency org="org.apache.hadoop" name="hadoop-hdfs" rev="2.7.1" conf="*->default"/>
-    <dependency org="org.apache.hadoop" name="hadoop-mapreduce-client-core" rev="2.7.1" conf="*->default"/>
-    <dependency org="org.apache.hadoop" name="hadoop-mapreduce-client-jobclient" rev="2.7.1" conf="*->default"/>
+    <dependency org="org.apache.hadoop" name="hadoop-hdfs" rev="2.7.2" conf="*->default"/>
+    <dependency org="org.apache.hadoop" name="hadoop-mapreduce-client-core" rev="2.7.2" conf="*->default"/>
+    <dependency org="org.apache.hadoop" name="hadoop-mapreduce-client-jobclient" rev="2.7.2" conf="*->default"/>
     <!-- End of Hadoop Dependencies -->
 
     <dependency org="com.ibm.icu" name="icu4j" rev="55.1" />
