build with the correct dependencies: build gora with hadoop2 and build nutch with avro 1.8.1 (the older 1.7.5 version was not generating the correct org.apache.nutch.storage files)

--- a/pom.xml
+++ b/pom.xml
@@ -217,9 +217,9 @@
                                     <property name="final.name" value="${project.artifactId}"/>
                                 </ant>
                                 <move file="${project.build.directory}/${nutch.checkout.dir}/urls" todir="${project.build.directory}/${nutch.checkout.dir}/runtime/local/" />
-                                <delete>
-                                    <fileset dir="${project.build.directory}/${nutch.checkout.dir}/runtime/local/lib" includes="*-0.98.8-hadoop2.jar"/>
-                                </delete>
+                                <!--<delete>-->
+                                    <!--<fileset dir="${project.build.directory}/${nutch.checkout.dir}/runtime/local/lib" includes="*-0.98.8-hadoop2.jar"/>-->
+                                <!--</delete>-->
                             </target>
                         </configuration>
                     </execution>
