--- a/ivy/ivy.xml
+++ b/ivy/ivy.xml
@@ -60,10 +60,15 @@
       <exclude org="org.mortbay.jetty" name="jsp-*" />
       <exclude org="ant" name="ant" />
     </dependency>
+
     <dependency org="org.apache.hadoop" name="hadoop-hdfs" rev="2.7.2" conf="*->default"/>
     <dependency org="org.apache.hadoop" name="hadoop-mapreduce-client-core" rev="2.7.2" conf="*->default"/>
     <dependency org="org.apache.hadoop" name="hadoop-mapreduce-client-jobclient" rev="2.7.2" conf="*->default"/>
+
     <!-- End of Hadoop Dependencies -->
+
+    <dependency org="org.apache.avro" name="avro" rev="1.8.1" conf="*->default"/>
+    <dependency org="org.jsoup" name="jsoup" rev="1.8.3" conf="*->default"/>
 
     <dependency org="com.ibm.icu" name="icu4j" rev="55.1" />
     <dependency org="org.apache.tika" name="tika-core" rev="1.10" />
@@ -110,8 +115,6 @@
     <dependency org="org.apache.gora" name="gora-hbase" rev="0.7-SNAPSHOT" conf="*->default" />
     <dependency org="org.apache.gora" name="gora-compiler-cli" rev="0.7-SNAPSHOT" conf="*->default"/>
     <dependency org="org.apache.gora" name="gora-compiler" rev="0.7-SNAPSHOT" conf="*->default"/>
-
-    <dependency org="org.jsoup" name="jsoup" rev="1.8.3" conf="*->default"/>
 
     <dependency org="com.evozon.mining" name="nutch-product-parsers-common" rev="1.0-SNAPSHOT" conf="*->default"/>
     <dependency org="com.evozon.mining" name="nutch-product-parsers" rev="1.0-SNAPSHOT" conf="*->default"/>
